--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
     - name: Install dependencies
       run: sudo apt install -y libsqlite3-dev sqlite3
     - name: Install dependencies
-      run: bundle install
+      run: |
+        bundle install
+        bundle exec appraisal install
     - name: Run tests
-      run: bundle exec rake
+      run: bundle exec appraisal rake
